--- a/backdrop2/main.css
+++ b/backdrop2/main.css
@@ -14,7 +14,7 @@ div.box {
 }
 
 div.box2 {
-	width:88px;
+	width:7px;
 	background-color:#b0c4de;
 	border:1px solid black;
 	padding:5px 5px 5px;
@@ -90,4 +90,9 @@ button:hover {
 	width:100%;
 	height:72px;
 	border-bottom:1px solid black;
+}
+#fake {
+	width:100%;
+	height:72px;
+	border-bottom:0px solid black;
 }
